--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -2,8 +2,9 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: postgresql
-  database: freelance
+  database: harumambu
   username: postgres
+  passwrod: 1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
